Changed package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "mock-js",
+    "name": "web-mock",
     "description": "Web App Mock Utility",
     "author": "4lejandrito",
     "version": "0.0.1",
