Changed package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "web-mock",
+    "name": "mean-mock",
     "description": "Web App Mock Utility",
     "author": "4lejandrito",
     "repository" : {
