--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "mocha": "*",
         "chai": "*",
         "istanbul": "*",
+        "coveralls": "*",
         "node-rest-client": "*",
         "request": "*",
         "async": "*",
@@ -26,6 +27,7 @@
     },
     "scripts": {        
         "test": "export NODE_ENV=test && mocha -R spec --recursive",
-        "coverage": "export NODE_ENV=test && ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- -R spec --recursive"
+        "coverage": "export NODE_ENV=test && ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- -R spec --recursive",
+        "coveralls": "export NODE_ENV=test && ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec --recursive && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
     }
 }
