--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
         "async": "*",
         "underscore": "*"
     },
-    "scripts": {        
-        "test": "export NODE_ENV=test && ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec --recursive && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage" 
-    }
+    "scripts": {
+        "test": "export NODE_ENV=test && mocha -R spec --recursive",
+        "coverage": "export NODE_ENV=test && ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- -R spec --recursive",
+        "coveralls": "export NODE_ENV=test && ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec --recursive && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
+     }
 }
