--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
         "type" : "git",
         "url" : "http://github.com/4lejandrito/node-mean-mock.git"
     },
-    "version": "1.0.7",
+    "version": "1.0.8",
     "private": false,
-    "main": "./src/mapper",
+    "main": "./src/mock",
     "engines": {
         "node": "0.10.21"
     },
