--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "type" : "git",
         "url" : "http://github.com/4lejandrito/node-mean-mock.git"
     },
-    "version": "1.1.2",
+    "version": "1.1.3",
     "private": false,
     "main": "./src/mock",
     "engines": {
@@ -15,16 +15,18 @@
     "dependencies": {
         "rekuire": "0.1.5",
         "express": "3.5.1",
-        "mongodb": "1.4.0",
-        "mocha": "1.18.2",
-        "chai": "1.9.1",
-        "istanbul": "0.2.7",
-        "mocha-lcov-reporter": "0.0.1",
-        "coveralls": "2.10.0",
+        "mongodb": "1.4.0",        
         "node-rest-client": "0.8.3",
         "request": "2.34.0",
         "async": "0.7.0",
         "underscore": "1.6.0"
+    },
+    "devDependencies": {
+        "mocha": "1.18.2",
+        "chai": "1.9.1",
+        "istanbul": "0.2.7",
+        "mocha-lcov-reporter": "0.0.1",
+        "coveralls": "2.10.0"
     },
     "scripts": {
         "test": "export NODE_ENV=test && mocha -R spec --recursive",
